rewrite processing